@@ -1,3 +1,8 @@
+Unreleased
+
+Fixed
+    Disconnecting from VGA terminal could cause node crash (#498)
+
 0.14.0 - 08/05/2022
 
 Added
